# corrective-RAG-LangGraph

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: overview.md  retrieval-report.md
ingestion/: pipeline.py
knowledge_base/: urls
scripts/: run_query.py  verify_retrieval.py
src/corrective_rag/: __init__.py  core.py  graph.py
src/corrective_rag/agents/: __init__.py
src/corrective_rag/chains/: __init__.py
src/corrective_rag/ingestion/: __init__.py  pipeline.py
src/corrective_rag/nodes/: __init__.py  base.py  document_grader.py  generation.py  retrieve.py  state.py  web_search.py
src/corrective_rag/retrievers/: __init__.py  vector.py
src/corrective_rag/tools/: __init__.py
src/corrective_rag/utils/: __init__.py
tests/: __init__.py  test_corrective_rag.py
